Wed Aug  6 08:01:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACEXML/common/ZipCharStream.cpp:
          Fixed compile error in some builds

        * ACEXML/parser/parser/Parser.cpp:
          Check for the dtd file using a / and \ path specifier. This
          makes it possible to also use a / on windows to specify
          the path. This fixes bugzilla 3352

        * ACEXML/common/FileCharStream.h:
          Doxygen fix

        * ACEXML/common/FileCharStream.cpp:
          No need to check for a valid pointer before calling delete

Tue Aug  5 19:33:26  2008  Steve Huston  <shuston@riverace.com>

        * ace/Log_Msg.cpp: Fixed tab characters.

        * ace/config-posix.h: Only set ACE_HAS_POSIX_SEM_TIMEOUT if the
          _POSIX_TIMEOUTS feature test is not -1 (disabled). Fixes build
          on HP-UX 11iv3.

        * examples/APG/ThreadPools/LF_ThreadPool.cpp (elect_new_leader): Log
          the "Resiging and Electing" message at LM_DEBUG severity, not
          LM_ERROR. This is on APG page 342. Thanks to Julien Vintrou for
          pointing this out.

        * THANKS: Added Julien Vintrou.

Tue Aug  5 20:19:28 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/config-linux-common.h: Removed ACE_HAS_BROKEN_THREAD_KEYFREE.
          Reverts change from
          Thu Aug  9 13:39:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
          which is no longer needed.

Tue Aug  5 18:51:02 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/MMAP_Memory_Pool.cpp:
        * ace/Service_Manager.cpp:
        * ace/Stream.cpp:
        * Kokyu/Dispatcher_Task.cpp:
        * apps/gperf/src/List_Node.cpp:
        * apps/gperf/src/Key_List.cpp:
        * apps/gperf/src/Gen_Perf.cpp:
        * apps/gperf/src/Iterator.cpp:
        * apps/gperf/src/Hash_Table.cpp:
        * ACEXML/common/ZipCharStream.cpp:
        * ACEXML/common/HttpCharStream.cpp:
        * ACEXML/parser/parser/Parser.inl: